--- a/guestbook-all-in-one.yaml
+++ b/guestbook-all-in-one.yaml
@@ -38,8 +38,8 @@ spec:
             memory: 100Mi
         ports:
         - containerPort: 6379
-        nodeSelector:
-          tier: backend
+      nodeSelector:
+        tier: backend
 ---
 apiVersion: v1
 kind: Service
@@ -88,8 +88,8 @@ spec:
           # value: env
         ports:
         - containerPort: 6379
-        nodeSelector:
-          tier: backend
+      nodeSelector:
+        tier: backend
 ---
 apiVersion: v1
 kind: Service
@@ -140,4 +140,4 @@ spec:
         ports:
         - containerPort: 80
         nodeSelector:
-          tier: backend
+          tier: frontend
