--- a/guestbook-one-node.yaml
+++ b/guestbook-one-node.yaml
@@ -39,7 +39,7 @@ spec:
         ports:
         - containerPort: 6379
       nodeSelector:
-        tier: db-tier
+        pool: db-pool
 ---
 apiVersion: v1
 kind: Service
@@ -89,7 +89,7 @@ spec:
         ports:
         - containerPort: 6379
       nodeSelector:
-        tier: db-tier
+        pool: db-pool
 ---
 apiVersion: v1
 kind: Service
@@ -140,4 +140,4 @@ spec:
         ports:
         - containerPort: 80
       nodeSelector:
-          tier: web-tier
+          pool: default-pool
